- Fixed library compatibility problems with Java 16 - Implemented Check Consent API in SDK - Fixed idm logout when cancelling Account creation in Login Popup