@@ -24,7 +24,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CaPe Account Manager</name>
 	<properties>
-		<java.version>15</java.version>
+		<java.version>16</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -144,8 +144,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
-					<arguments>--enable-preview</arguments>
-					<jvmArguments>--enable-preview</jvmArguments>
+					 <jvmArguments>--illegal-access=permit</jvmArguments>
 				</configuration>
 				<executions>
 					<execution>
@@ -170,9 +169,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
 				<configuration>
-					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
